# ros2_robot_navigation

./: README.md
src/autopartol_interfaces/: CMakeLists.txt  package.xml
src/cpp01_nav/: CMakeLists.txt  package.xml
src/cpp01_nav/config/: nav2_params.yaml  ros2_controller.yaml
src/cpp01_nav/launch/: gazebo_sim_launch.py  navigation2_launch.py
src/cpp01_nav/maps/: room.pgm  room.yaml
src/cpp01_nav/rviz/: car.rviz
src/cpp01_nav/urdf/: car.urdf.xacro  car_base.urdf.xacro  car_camera.urdf.xacro  car_laser.urdf.xacro  car_ros2_control.xacro  common_inertial.xacro  gazebo_control_plugin.xacro
src/cpp01_nav/world/: BigHouse.world
src/cpp01_nav/world/room/: model.sdf
src/cpp02_nav_application/: package.xml  setup.cfg  setup.py
src/cpp02_nav_application/cpp02_nav_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_flollower.py
src/cpp03_application_cpp/: CMakeLists.txt  package.xml
src/cpp03_application_cpp/src/: demo01_init_pose.cpp  demo02_get_pose.cpp  demo03_nav_to_pose.cpp  demo04_waypoint_flollower.cpp
src/cpp04_autopartol_robot_py/: package.xml  setup.cfg  setup.py
src/cpp04_autopartol_robot_py/config/: partol_config.yaml
src/cpp04_autopartol_robot_py/cpp04_autopartol_robot_py/: partol_node.py  speaker.py
src/cpp04_autopartol_robot_py/launch/: autopartol_launch.py
